add pkg-config to build dependencies and correct the homepage

--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,9 @@ Source: vdr-plugin-dbus2vdr
 Section: video
 Priority: extra
 Maintainer: Holger Schvestka <hotzenplotz5@gmx.de>
-Build-Depends: cdbs, debhelper (>= 7), vdr-dev (>= 1.7.17), libdbus-1-dev
+Build-Depends: cdbs, debhelper (>= 7), vdr-dev (>= 1.7.17), libdbus-1-dev, pkg-config
 Standards-Version: 3.9.1
-Homepage: http://home.versanet.de/~lhanisch/
+Homepage: https://github.com/flensrocker/vdr-plugin-dbus2vdr
 
 Package: vdr-plugin-dbus2vdr
 Architecture: any
