--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,7 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 DEB_INSTALL_CHANGELOGS_ALL = HISTORY
 
 MAKE_OPTIONS = DVBDIR=/usr VDRDIR=/usr/include/vdr LIBDIR=. \
-#               LOCALEDIR=debian/tmp/usr/share/locale
+               LOCALEDIR=debian/tmp/usr/share/locale
 
 common-build-arch::
 	$(MAKE) all $(MAKE_OPTIONS)
