--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: vdr-plugin-dbus2vdr
 Section: video
 Priority: extra
 Maintainer: Holger Schvestka <hotzenplotz5@gmx.de>
-Build-Depends: cdbs, debhelper (>= 7), vdr-dev (>= 1.7.17), libdbus-1-dev, pkg-config, libjpeg62-dev
+Build-Depends: cdbs, debhelper (>= 7), vdr-dev (>= 1.7.17), libdbus-1-dev, pkg-config, libjpeg62-dev, libpng++-dev
 Standards-Version: 3.9.1
 Homepage: https://github.com/flensrocker/vdr-plugin-dbus2vdr
 
