enable Upstart events

--- a/debian/plugin.dbus2vdr.conf
+++ b/debian/plugin.dbus2vdr.conf
@@ -7,4 +7,5 @@
 
 --shutdown-hooks=/usr/share/vdr/shutdown-hooks
 --shutdown-hooks-wrapper=/usr/share/vdr/plugins/dbus2vdr/shutdown-wrapper
+--upstart
 
