start/stop upstart-job dbus2vdr on plugin start/stop

--- a/etc/dbus2vdr.conf
+++ b/etc/dbus2vdr.conf
@@ -16,7 +16,7 @@ expect fork
 
 pre-start exec logger -t dbus2vdr dbus2vdr-daemon starting
 
-exec dbus-daemon --config-file=$confdir/network.conf --fork --print-address > $confdir/network-address.conf
+exec dbus-daemon --config-file=$confdir/network.conf --fork --address="tcp:host=`/bin/hostname`,bind=*,port=0" --print-address > $confdir/network-address.conf
 
 post-stop script
   rm -f $confdir/network-address.conf
