--- a/etc/network.conf
+++ b/etc/network.conf
@@ -6,7 +6,7 @@
 <busconfig>
   <keep_umask/>
 
-  <listen>tcp:host=vdr,bind=*,port=0</listen>
+  <listen>unix:abstract=/de/tvdr/vdr/plugins/dbus2vdr</listen>
   <auth>ANONYMOUS</auth>
   <allow_anonymous/>
 
