update upstart-user-job for dbus-daemon

--- a/etc/dbus2vdr.conf
+++ b/etc/dbus2vdr.conf
@@ -5,18 +5,20 @@
 
 description	"dbus2vdr D-Bus message bus"
 
-start on (local-filesystems and static-network-up)
+start on local-filesystems and static-network-up
 stop on deconfiguring-networking
+
 
 env confdir=/var/lib/vdr/plugins/dbus2vdr
 
 respawn
-expect fork
 
 
-pre-start exec logger -t dbus2vdr dbus2vdr-daemon starting
+pre-start script
+  logger -t dbus2vdr dbus2vdr-daemon starting, conf = $confdir
+end script
 
-exec dbus-daemon --config-file=$confdir/network.conf --fork --address="tcp:host=`/bin/hostname`,bind=*,port=0" --print-address > $confdir/network-address.conf
+exec dbus-daemon --config-file=$confdir/network.conf --address="tcp:host=`/bin/hostname`,bind=*,port=0" --print-address > $confdir/network-address.conf
 
 post-stop script
   rm -f $confdir/network-address.conf
