--- a/etc/dbus2vdr.conf
+++ b/etc/dbus2vdr.conf
@@ -5,8 +5,8 @@
 
 description	"dbus2vdr D-Bus message bus"
 
-start on local-filesystems and static-network-up
-stop on deconfiguring-networking
+start on (vdr-plugin dbus2vdr=started)
+stop on (vdr-plugin dbus2vdr=stopped) or deconfiguring-networking
 
 
 env confdir=/var/lib/vdr/plugins/dbus2vdr
