--- a/debian/plugin.dbus2vdr.conf
+++ b/debian/plugin.dbus2vdr.conf
@@ -7,5 +7,6 @@
 
 --shutdown-hooks=/usr/share/vdr/shutdown-hooks
 --shutdown-hooks-wrapper=/usr/share/vdr-plugin-dbus2vdr/shutdown-wrapper
+--network
 --upstart
 
