add start/stop stanzas to Upstart job

--- a/etc/dbus2vdr.conf
+++ b/etc/dbus2vdr.conf
@@ -5,6 +5,10 @@
 
 description	"dbus2vdr D-Bus message bus"
 
+start on local-filesystems and static-network-up
+stop on deconfiguring-networking
+
+
 setuid vdr
 
 env confdir=/var/lib/vdr/plugins/dbus2vdr
