use HOSTNAME env variable instead of /bin/hostname in Upstart-Job

--- a/etc/dbus2vdr.conf
+++ b/etc/dbus2vdr.conf
@@ -17,10 +17,10 @@ respawn
 
 
 pre-start script
-  logger -t dbus2vdr dbus2vdr-daemon starting, conf = $confdir
+  logger -t dbus2vdr dbus2vdr-daemon on $HOSTNAME starting, conf = $confdir
 end script
 
-exec dbus-daemon --config-file=$confdir/network.conf --address="tcp:host=`/bin/hostname`,bind=*,port=0" --print-address > $confdir/network-address.conf
+exec dbus-daemon --config-file=$confdir/network.conf --address="tcp:host=$HOSTNAME,bind=*,port=0" --print-address > $confdir/network-address.conf
 
 post-stop script
   rm -f $confdir/network-address.conf
